--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,132 @@
 } 
 body{
     font-family: 'Roboto', sans-serif;
+} 
+.logo{
+    font-family: 'Raleway', sans-serif; 
+    font-weight: 700;
+font-size: 26px;
+letter-spacing: 0.03em; 
+color: var(--accent-color); 
 }
 .hero-btn{
     background-color: var(--accent-color);
+    color: var(--primary-backround-color); 
+    font-weight: 700; 
+    line-height: 1.87;
+}  
+.logo-black{
+    color: var(--logo-color);
+} 
+.navigation-link{
+    font-weight: 500;
+font-size: 14px;
+letter-spacing: 0.02em; 
+color: var(--title-text-color); 
+line-height: 1.14;
+} 
+.contacts-link{
+    font-weight: 500;
+font-size: 14px;
+letter-spacing: 0.02em; 
+color: var(--primery-text-color);
+} 
+.hero{
+    padding-top: 200px; 
+    padding-bottom: 200px; 
+    background-color: var(--secondary-backround-color);
+} 
+.hero-title{
+    text-align: center; 
+    font-size: 44px; 
+    color: var(--primary-backround-color); 
+    font-weight: 900; 
+    line-height: 1.36; 
+    text-transform: uppercase; 
+    margin-bottom: 30px;
+} 
+.benefits-title{
+    font-weight: 700;
+font-size: 14px;
+letter-spacing: 0.03em;
+text-transform: uppercase; 
+color: var(--title-text-color);
+} 
+.benefits-text{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.03em;  
+    color: var(--primery-text-color);
+} 
+.title{
+    font-weight: 700;
+font-size: 36px;
+letter-spacing: 0.03em;
+text-align: center; 
+color: var(--title-text-color);
+} 
+.team{
+    background-color: var(--backround-team-color);
+} 
+.team-name{
+    font-weight: 500;
+font-size: 16px;
+letter-spacing: 0.03em;
+text-align: center; 
+color: var(--title-text-color);
+} 
+.team-position{
+    font-size: 16px;
+letter-spacing: 0.03em;
+text-align: center; 
+color: var(--primery-text-color);
+} 
+.footer-logo{
+    font-weight: 700;
+font-size: 26px;
+letter-spacing: 0.03em; 
+color: var(--accent-color); 
+font-family: 'Raleway',sans-serif;
+} 
+.footer-span{
     color: var(--primary-backround-color);
+} 
+.footer{
+    background-color: var(--secondary-backround-color);
+} 
+.address-name{
+    font-weight: 400;
+font-size: 14px;
+line-height: 171%;
+letter-spacing: 0.03em; 
+color: var(--primary-backround-color);
+} 
+.address-link{
+    font-weight: 400;
+font-size: 14px;
+line-height: 171%;
+letter-spacing: 0.03em;
+color: var(--secondary-address-color);
+} 
+.portfolio-button{
+    font-weight: 500;
+font-size: 16px;
+line-height: 162%;
+letter-spacing: 0.03em; 
+color: var(--title-text-color);
+} 
+.portfolio-title{
+    font-weight: 700;
+font-size: 18px;
+line-height: 200%;
+letter-spacing: 0.06em; 
+color: var(--title-text-color);
+} 
+.portfolio-text{
+    font-weight: 700;
+font-size: 18px;
+line-height: 200%;
+letter-spacing: 0.06em; 
+color: var(--primery-text-color);
 }
